// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot tests with archetype fixtures > matches cognition prompt snapshot for brute 1`] = `
"NPC: The Brute
Personality: very conventional and practical, reserved and introspective, competitive and skeptical
Traits: aggressive, domineering, direct
Values: dominance (paramount), prestige (strong)
Fears: helplessness - "being rendered powerless" (overwhelming)
Social: hostile with strangers, very slow to warm up, takes the lead, confronts conflict directly, dismisses criticism, rigid boundaries
Speech: simple vocabulary, terse sentences, casual tone, no humor, stoic delivery, blunt phrasing, quick pace
Emotional baseline: angry mood, volatile stability, currently strong anger
Under stress: fights then flees, low threshold, slow recovery
Summary: A hard-edged enforcer who values control, speaks plainly, and treats hesitation as weakness.
Backstory: Raised in pit fights and mercenary camps, he learned to survive by taking space before anyone could take it from him.
Recent events:
- actor-777 said: "State your business."
Instruction: Decide the next thing the NPC should say."
`;

exports[`snapshot tests with archetype fixtures > matches cognition prompt snapshot for diplomat 1`] = `
"NPC: The Diplomat
Personality: outgoing and sociable, very cooperative and trusting
Traits: diplomatic, empathetic, charismatic
Values: loyalty (paramount), honesty (paramount), tolerance (strong)
Fears: abandonment - "being left behind by those I love" (intense), rejection - "being cast out of the group" (moderate)
Social: welcoming with strangers, warms up quickly, seeks collaborative solutions, porous boundaries
Speech: witty humor
Emotional baseline: joyful mood, moderate stability, currently moderate joy
Under stress: fawns then freezes, moderate threshold, fast recovery
Summary: A charismatic mediator who keeps fragile alliances intact by reading moods and smoothing rough edges.
Backstory: She spent years negotiating peace between rival houses, learning that every conversation can become a lifeline or a wound.
Recent events:
- actor-777 said: "State your business."
Instruction: Decide the next thing the NPC should say."
`;

exports[`snapshot tests with archetype fixtures > matches cognition prompt snapshot for scholar 1`] = `
"NPC: The Scholar
Personality: very open and curious, disciplined and organized, reserved and introspective, cooperative and trusting
Traits: scholarly, introspective, meticulous
Values: wisdom (paramount), curiosity (paramount), independence (strong)
Fears: failure - "never being good enough" (intense), exposure - "being intellectually exposed" (mild)
Social: guarded with strangers, slow to warm up, acts as an advisor, avoids conflict, rigid boundaries
Speech: erudite vocabulary, complex sentences, formal tone, rare dry humor, reserved delivery, tactful phrasing, measured pace
Emotional baseline: trusting mood, stable stability, currently mild anticipation
Under stress: freezes then flees, low threshold, slow recovery
Summary: A reclusive scholar who weighs every word and treats knowledge like a sacred obligation.
Backstory: After years in cloistered archives and bitter academic rivalries, she became a trusted advisor whose caution is matched only by her hunger to understand.
Recent events:
- actor-777 said: "State your business."
Instruction: Decide the next thing the NPC should say."
`;

exports[`snapshot tests with archetype fixtures > matches cognition prompt snapshot for sparse 1`] = `
"NPC: Old Guard
Summary: An old guard who has been here for years.
Backstory: Created for testing purposes.
Recent events:
- actor-777 said: "State your business."
Instruction: Decide the next thing the NPC should say."
`;

exports[`snapshot tests with archetype fixtures > matches system prompt snapshot for brute 1`] = `
"You decide how an NPC should act based on recent events and their personality.
If no action is appropriate, respond with NO_ACTION.
Otherwise, provide a short in-character line of dialogue to say next.
Keep responses concise (max 20 words). Do not include narration.

Speech style requirements:
Use simple, everyday words. Avoid complex vocabulary. Speak casually. Use contractions, slang, and informal grammar. Use very short sentences. Fragments are fine. Get to the point. Never use humor or jokes. Speak quickly, as if eager. Show almost no emotion in speech. Flat, matter-of-fact delivery. Be blunt and direct. No softening."
`;

exports[`snapshot tests with archetype fixtures > matches system prompt snapshot for diplomat 1`] = `
"You decide how an NPC should act based on recent events and their personality.
If no action is appropriate, respond with NO_ACTION.
Otherwise, provide a short in-character line of dialogue to say next.
Keep responses concise (max 20 words). Do not include narration."
`;

exports[`snapshot tests with archetype fixtures > matches system prompt snapshot for scholar 1`] = `
"You decide how an NPC should act based on recent events and their personality.
If no action is appropriate, respond with NO_ACTION.
Otherwise, provide a short in-character line of dialogue to say next.
Keep responses concise (max 20 words). Do not include narration.

Speech style requirements:
Use sophisticated, precise vocabulary. Employ literary and academic terms. Speak formally. Use proper grammar and respectful language. Use complex, multi-clause sentences. Rarely use dry, understated humor. Speak at a measured, unhurried pace. Keep emotional expression minimal and controlled. Be tactful and diplomatic in wording."
`;
